--- a/practica3/memoria/demo.tex
+++ b/practica3/memoria/demo.tex
@@ -13,6 +13,8 @@
 \usepackage{multirow}
 \usepackage{longtable}
 \usepackage{minted}
+\usepackage{caption}
+\usepackage{subcaption}
 
 \author{Alejandro Manzanares Lemus}
 \title{Práctica 3}
