--- a/practica3/memoria/input/apartado3.tex
+++ b/practica3/memoria/input/apartado3.tex
@@ -1,1 +1,78 @@
 \chapter{Análisis de Salidas y Experimentación}
+
+\section{Comparación de modificaciones}
+
+\subsection{Modelo A vs Modelo B}
+\begin{table}[H]
+\centering
+\begin{tabular}{|l|}
+\hline
+\textbf{Resultados de la comparacion con los Modelos A  y B con 1 simulación} \\ \hline
+El Modelo A es preferible un 13\% de veces \\ \hline
+El Modelo B es preferible un 87\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y B con 5 simulaciones} \\ \hline
+El Modelo A es preferible un 25\% de veces \\ \hline
+El Modelo B es preferible un 75\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y B con 10 simulaciones} \\ \hline
+El Modelo A es preferible un 50\% de veces \\ \hline
+El Modelo B es preferible un 50\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y B con 25 simulaciones} \\ \hline
+El Modelo A es preferible un 0\% de veces \\ \hline
+El Modelo B es preferible un 100\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y B con 50 simulaciones} \\ \hline
+El Modelo A es preferible un 0\% de veces \\ \hline
+El Modelo B es preferible un 100\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y B con 100 simulaciones} \\ \hline
+El Modelo A es preferible un 0\% de veces \\ \hline
+El Modelo B es preferible un 100\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y B con 500 simulaciones} \\ \hline
+El Modelo A es preferible un 0\% de veces \\ \hline
+El Modelo B es preferible un 100\% de veces \\ \hline
+\end{tabular}
+\end{table}
+
+\subsection{Modelo A vs Modelo C}
+\begin{table}[H]
+\centering
+\begin{tabular}{|l|}
+\hline
+\textbf{Resultados de la comparacion con los Modelos A  y C con 1 simulación} \\ \hline
+El Modelo A es preferible un 86\% de veces \\ \hline
+El Modelo C es preferible un 14\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y C con 5 simulaciones} \\ \hline
+El Modelo A es preferible un 57\% de veces \\ \hline
+El Modelo C es preferible un 43\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y C con 10 simulaciones} \\ \hline
+El Modelo A es preferible un 86\% de veces \\ \hline
+El Modelo C es preferible un 14\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y C con 25 simulaciones} \\ \hline
+El Modelo A es preferible un 40\% de veces \\ \hline
+El Modelo C es preferible un 60\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y C con 50 simulaciones} \\ \hline
+El Modelo A es preferible un 29\% de veces \\ \hline
+El Modelo C es preferible un 71\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y C con 100 simulaciones} \\ \hline
+El Modelo A es preferible un 37\% de veces \\ \hline
+El Modelo C es preferible un 63\% de veces \\ \hline
+ \\ \hline
+\textbf{Resultados de la comparacion con los Modelos A  y C con 500 simulaciones} \\ \hline
+El Modelo A es preferible un 36\% de veces \\ \hline
+El Modelo C es preferible un 64\% de veces \\ \hline
+\end{tabular}
+\end{table}
+\section{Comparación mediante intevalos de cofianza}
+
+\subsection{Modelo A vs Modelo B}
+
+\subsection{Modelo A vs Modelo C}
