--- a/practica3/memoria/input/apartado2.tex
+++ b/practica3/memoria/input/apartado2.tex
@@ -1,1 +1,18 @@
 \chapter{Mi Tercer Modelo de Simulación Discreto}
+
+\section{Modificaciones al sistema}
+El código que contiene las modificaciones al sistema se encuentra disponible en \textbf{src/puerto.cpp}.
+
+\section{Comparativa de las modificaciones}
+\begin{table}[H]
+\centering
+\begin{tabular}{|l|c|c|}
+\hline
+\multicolumn{1}{|c|}{\textbf{Modificación}} & \textbf{Media} & \textbf{Dt} \\ \hline
+\textbf{Original} & 1.788.112,13 & 32.264,37 \\ \hline
+\textbf{4 puntos de atraque} & 1.790.571,88 & 32.579,02 \\ \hline
+\textbf{5 puntos de atraque} & 1.790.525,50 & 32.605,38 \\ \hline
+\textbf{Remolcador al que no afectan las tormentas} & 1.788.556,88 & 32.181,05 \\ \hline
+\textbf{Remolcador más rapido} & 1.787.903,63 & 31.801,75 \\ \hline
+\end{tabular}
+\end{table}
