--- a/practica3/memoria/input/apartado3.tex
+++ b/practica3/memoria/input/apartado3.tex
@@ -7,72 +7,108 @@
 \centering
 \begin{tabular}{|l|}
 \hline
-\textbf{Resultados de la comparacion con los Modelos A  y B con 1 simulación} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y B con 1 simulación} \\ \hline
 El Modelo A es preferible un 13\% de veces \\ \hline
 El Modelo B es preferible un 87\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y B con 5 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y B con 5 simulaciones} \\ \hline
 El Modelo A es preferible un 25\% de veces \\ \hline
 El Modelo B es preferible un 75\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y B con 10 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y B con 10 simulaciones} \\ \hline
 El Modelo A es preferible un 50\% de veces \\ \hline
 El Modelo B es preferible un 50\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y B con 25 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y B con 25 simulaciones} \\ \hline
 El Modelo A es preferible un 0\% de veces \\ \hline
 El Modelo B es preferible un 100\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y B con 50 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y B con 50 simulaciones} \\ \hline
 El Modelo A es preferible un 0\% de veces \\ \hline
 El Modelo B es preferible un 100\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y B con 100 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y B con 100 simulaciones} \\ \hline
 El Modelo A es preferible un 0\% de veces \\ \hline
 El Modelo B es preferible un 100\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y B con 500 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y B con 500 simulaciones} \\ \hline
 El Modelo A es preferible un 0\% de veces \\ \hline
 El Modelo B es preferible un 100\% de veces \\ \hline
 \end{tabular}
 \end{table}
+
+Podemos ver en este caso, como hay una clara victoria del modelo B contra el modelo A. Para un número bajo de simulaciones el modelo A se superpone alguna vez al modelo B, pero según aumenta el número de simulaciones, vemos como el modelo B obtiene el 100\% de preferencia respecto al modelo A.
 
 \subsection{Modelo A vs Modelo C}
 \begin{table}[H]
 \centering
 \begin{tabular}{|l|}
 \hline
-\textbf{Resultados de la comparacion con los Modelos A  y C con 1 simulación} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y C con 1 simulación} \\ \hline
 El Modelo A es preferible un 86\% de veces \\ \hline
 El Modelo C es preferible un 14\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y C con 5 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y C con 5 simulaciones} \\ \hline
 El Modelo A es preferible un 57\% de veces \\ \hline
 El Modelo C es preferible un 43\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y C con 10 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y C con 10 simulaciones} \\ \hline
 El Modelo A es preferible un 86\% de veces \\ \hline
 El Modelo C es preferible un 14\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y C con 25 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y C con 25 simulaciones} \\ \hline
 El Modelo A es preferible un 40\% de veces \\ \hline
 El Modelo C es preferible un 60\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y C con 50 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y C con 50 simulaciones} \\ \hline
 El Modelo A es preferible un 29\% de veces \\ \hline
 El Modelo C es preferible un 71\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y C con 100 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y C con 100 simulaciones} \\ \hline
 El Modelo A es preferible un 37\% de veces \\ \hline
 El Modelo C es preferible un 63\% de veces \\ \hline
  \\ \hline
-\textbf{Resultados de la comparacion con los Modelos A  y C con 500 simulaciones} \\ \hline
+\textbf{Resultados de la comparación con los Modelos A  y C con 500 simulaciones} \\ \hline
 El Modelo A es preferible un 36\% de veces \\ \hline
 El Modelo C es preferible un 64\% de veces \\ \hline
 \end{tabular}
 \end{table}
-\section{Comparación mediante intevalos de cofianza}
+
+Para el modelo A y el modelo C, la diferencia no es tan grande. Los datos de preferencia varían para un número de simulaciones bajo, mientras que según aumentan las simulaciones, se establece la superioridad del modelo C respecto al modelo A.
+
+Estos resultados son consecuentes, ya que tanto el modelo B como el C se tratan de mejoras del modelo A. Por tanto, podemos concluir que las modificaciones realizadas realmente mejoran al sistema original.
+
+\newpage
+
+\section{Comparación mediante intervalos de confianza}
+
+Las comparaciones entre ambos sistemas se hacen para una única simulación.
 
 \subsection{Modelo A vs Modelo B}
+\begin{table}[H]
+\centering
+\begin{tabular}{|c|c|}
+\hline
+\multicolumn{2}{|c|}{\textbf{Intervalos de confianza para Modelo A y Modelo B}} \\ \hline
+\textbf{Media:} & 0,168427 \\ \hline
+\textbf{Varianza:} & 0,492923 \\ \hline
+\textbf{Intervalo:} & {[}0.0518525, 0.285001{]} \\ \hline
+\end{tabular}
+\end{table}
+
+Podemos ver que el 0 no se encuentra dentro del intervalo de confianza, por lo que podemos concluir que existe una gran diferencia entre los sistemas. Además como la diferencia de las medias es positiva, podemos asegurar con un 95\% de confianza que el Modelo B mejora al Modelo A.
 
 \subsection{Modelo A vs Modelo C}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|c|c|}
+\hline
+\multicolumn{2}{|c|}{\textbf{Intervalos de confianza para Modelo A y Modelo C}} \\ \hline
+\textbf{Media} & 0,0135193 \\ \hline
+\textbf{Varianza} & 0,4531300 \\ \hline
+\textbf{Intervalo} & {[}-0.0982504, 0.125289{]} \\ \hline
+\end{tabular}
+\end{table}
+
+En este caso el 0 se encuentra presente en el intervalo, por lo que no podemos asegurar si el modelo C mejora al modelo A (cosa que sabemos que si hace por el apartado anterior), por tanto sería necesario aumentar el número de simulaciones del sistema para intentar excluir al 0 del intervalo de confianza.
