--- a/practica4/memoria/input/memoria.tex
+++ b/practica4/memoria/input/memoria.tex
@@ -48,3 +48,146 @@ Podemos apreciar como el número de infectados (I) se reduce con el tiempo --- I
 	\caption{Resultados para $S_0$ en relación a $a/b$}
 \end{figure}
 
+\section{Tarea 3}
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_acumulado.png}
+		\caption{$I_0$ = 1, $S_0$ = 999, $R_0$ = 0, a = 0.001, b = 0.125}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{I_S.png}
+		\caption{$I_0$ = 1, $S_0$ = 999, $R_0$ = 0, a = 0.001, b = 0.125}
+	\end{subfigure}
+	\caption{}
+\end{figure}
+
+\section{Tarea 4}
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_5.png}
+		\caption{$I_0$ = 1, $S_0$ = 999, $R_0$ = 0, a = 0.001, b = 0.125}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_acumulado_5.png}
+		\caption{$I_0$ = 1, $S_0$ = 999, $R_0$ = 0, a = 0.001, b = 0.125}
+	\end{subfigure}
+	\caption{}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_6.png}
+		\caption{$I_0$ = 1, $S_0$ = 999, $R_0$ = 0, a = 0.0005, b = 0.25}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_acumulado_6.png}
+		\caption{$I_0$ = 1, $S_0$ = 999, $R_0$ = 0, a = 0.0005, b = 0.25}
+	\end{subfigure}
+	\caption{}
+\end{figure}
+
+\section{Tarea 5}
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_5.png}
+		\caption{$I_0$ = 1, $S_0$ = 999, $R_0$ = 0, a = 0.001, b = 0.125}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_acumulado_5.png}
+		\caption{$I_0$ = 1, $S_0$ = 999, $R_0$ = 0, a = 0.001, b = 0.125}
+	\end{subfigure}
+	\caption{}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_7.png}
+		\caption{$I_0$ = 500, $S_0$ = 500, $R_0$ = 0, a = 0.001, b = 0.125}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_acumulado_7.png}
+		\caption{$I_0$ = 500, $S_0$ = 500, $R_0$ = 0, a = 0.001, b = 0.125}
+	\end{subfigure}
+	\caption{}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_8.png}
+		\caption{$I_0$ = 1, $S_0$ = 499, $R_0$ = 500, a = 0.0005, b = 0.25}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_acumulado_8.png}
+		\caption{$I_0$ = 1, $S_0$ = 499, $R_0$ = 500, a = 0.0005, b = 0.25}
+	\end{subfigure}
+	\caption{}
+\end{figure}
+
+\section{Tarea 6}
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_9.png}
+		\caption{dt = 0.1, Integración de Runge-Kutta}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_9_e.png}
+		\caption{dt = 0.1, Integración de Euler}
+	\end{subfigure}
+	\caption{}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_10.png}
+		\caption{dt = 0.05, Integración de Runge-Kutta}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_10_e.png}
+		\caption{dt = 0.05, Integración de Euler}
+	\end{subfigure}
+	\caption{}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_11.png}
+		\caption{dt = 0.01, Integración de Runge-Kutta}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{ISR_11_e.png}
+		\caption{dt = 0.01, Integración de Euler}
+	\end{subfigure}
+	\caption{}
+\end{figure}
